# libkrf

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  basic_capture  build.sh  cmake_install.cmake  evilmon
debian/: control  debhelper-build-stamp  files  libkrf.substvars  rules
debian/.debhelper/libkrf/: dbgsym-build-ids
debian/.debhelper/libkrf/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/libkrf/dbgsym-root/usr/share/doc/: libkrf-dbgsym
debian/libkrf/DEBIAN/: control  md5sums
examples/: basic_capture.cpp
include/: libkrf.h
libkrf/conf/: distributions
libkrf/db/: checksums.db  contents.cache.db  packagenames.db  packages.db  references.db  release.caches.db
libkrf/dists/kali-rolling/: Release
libkrf/dists/kali-rolling/main/binary-amd64/: Packages  Release
libkrf/pool/main/libk/libkrf/: libkrf_1.0-1_amd64.deb
src/: analysis.cpp  capture.cpp  monitor.cpp
